; ModuleID = '/home/carl/AnghaBench/curl/lib/extr_smtp.c_smtp_block_statemach.c'
source_filename = "/home/carl/AnghaBench/curl/lib/extr_smtp.c_smtp_block_statemach.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.connectdata = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { %struct.smtp_conn }
%struct.smtp_conn = type { i64, i32 }

@CURLE_OK = common dso_local global i64 0, align 8
@SMTP_STOP = common dso_local global i64 0, align 8
@TRUE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.connectdata*, i32)* @smtp_block_statemach to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @smtp_block_statemach(%struct.connectdata* %0, i32 %1) #0 {
  %3 = alloca %struct.connectdata*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  %6 = alloca %struct.smtp_conn*, align 8
  store %struct.connectdata* %0, %struct.connectdata** %3, align 8
  store i32 %1, i32* %4, align 4
  %7 = load i64, i64* @CURLE_OK, align 8
  store i64 %7, i64* %5, align 8
  %8 = load %struct.connectdata*, %struct.connectdata** %3, align 8
  %9 = getelementptr inbounds %struct.connectdata, %struct.connectdata* %8, i32 0, i32 0
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i32 0, i32 0
  store %struct.smtp_conn* %10, %struct.smtp_conn** %6, align 8
  br label %11

11:                                               ; preds = %23, %2
  %12 = load %struct.smtp_conn*, %struct.smtp_conn** %6, align 8
  %13 = getelementptr inbounds %struct.smtp_conn, %struct.smtp_conn* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = load i64, i64* @SMTP_STOP, align 8
  %16 = icmp ne i64 %14, %15
  br i1 %16, label %17, label %21

17:                                               ; preds = %11
  %18 = load i64, i64* %5, align 8
  %19 = icmp ne i64 %18, 0
  %20 = xor i1 %19, true
  br label %21

21:                                               ; preds = %17, %11
  %22 = phi i1 [ false, %11 ], [ %20, %17 ]
  br i1 %22, label %23, label %29

23:                                               ; preds = %21
  %24 = load %struct.smtp_conn*, %struct.smtp_conn** %6, align 8
  %25 = getelementptr inbounds %struct.smtp_conn, %struct.smtp_conn* %24, i32 0, i32 1
  %26 = load i32, i32* @TRUE, align 4
  %27 = load i32, i32* %4, align 4
  %28 = call i64 @Curl_pp_statemach(i32* %25, i32 %26, i32 %27)
  store i64 %28, i64* %5, align 8
  br label %11

29:                                               ; preds = %21
  %30 = load i64, i64* %5, align 8
  ret i64 %30
}

declare dso_local i64 @Curl_pp_statemach(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
